Disable videcheck on mobile project page until tested. Fix menu button displayed while preloader up. Active state to work listing project items

--- a/project/sass/views/_header.scss
+++ b/project/sass/views/_header.scss
@@ -15,6 +15,11 @@
 		.mobile-menu-btn {
 			transform: none;
 		}
+
+		.mobile-menu-btn {
+			opacity: 1;
+			visibility: visible;
+		}
 	}
 
 	@include respond-to(small) {
@@ -94,6 +99,9 @@
 		transform: translate(0, 100px);
 		transform: translate3d(0, 100px, 0);
 		transition: all .3s $easeOutCubic;
+
+		opacity: 0;
+		visibility: hidden;
 
 		.bar {
 			position: absolute;
