--- a/project/sass/views/_work.scss
+++ b/project/sass/views/_work.scss
@@ -35,6 +35,11 @@
 					}
 				}
 			}
+
+			&:active {
+				opacity: 0.7;
+				transition: none;
+			}
 		}
 
 		@include respond-to(smallest) {
